Bug 31755 - procutils_read_file doesn't start with a leading underscore
Summary: procutils_read_file doesn't start with a leading underscore
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.40
: P2 normal
Target Milestone: 2.40
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-19 22:33 UTC by H.J. Lu
Modified: 2024-05-24 12:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2024-05-19 22:33:56 UTC
procutils_read_file is only used by pidfd_getpid and isn't exported by
libc.so.  Shouldn't it start with a leading underscore?
Comment 1 Sourceware Commits 2024-05-20 12:22:58 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=7935e7a537cd3347b922dc9f24a2b722dd80156c

commit 7935e7a537cd3347b922dc9f24a2b722dd80156c
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Sun May 19 18:46:36 2024 -0700

    Rename procutils_read_file to __libc_procutils_read_file [BZ #31755]
    
    Fix BZ #31755 by renaming the internal function procutils_read_file to
    __libc_procutils_read_file.
    
    Signed-off-by: H.J. Lu <hjl.tools@gmail.com>
    Reviewed-by: Adhemerval Zanella  <adhemerval.zanella@linaro.org>
Comment 2 H.J. Lu 2024-05-24 12:49:27 UTC
Fixed in 2.40